# BBC

./: .gitignore  CMakeLists.txt  README.md  Skoge.pro  app.cpp  app.h  debug.cpp  debug.h  event.cpp  event.h  main.cpp  object.cpp  object.h
depend/: CMakeLists.txt
depend/sfml/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  app.hpp  debug.cpp  debug.h  debug.hpp  event.cpp  event.hpp  main.cpp  mgr.cpp  mgr.h  mgr.hpp  object.cpp  object.h  object.hpp  tex.cpp  tex.hpp  vector2.cpp  vector2.hpp
src/addons/: addon.cpp  addon.h
src/animation/: ah.cpp  ah.h
